fix(core): fixes a minor security warning

--- a/packages/core/lib/views/component_variation.hbs
+++ b/packages/core/lib/views/component_variation.hbs
@@ -40,6 +40,11 @@
 
   <body>
     {{{html}}}
+    {{#if error}}
+      <div class="MiyagiContent">
+        <p class="MiyagiError">{{error}}</p>
+      </div>
+    {{/if}}
   </body>
 
 </html>
