--- a/packages/core/lib/views/iframe_component.hbs
+++ b/packages/core/lib/views/iframe_component.hbs
@@ -86,6 +86,9 @@
           {{else}}
             <div class="MiyagiComponent-html" dir="{{../componentTextDirection}}" lang="{{../componentLanguage}}">
               {{{html}}}
+              {{#if error}}
+                <p class="MiyagiError">{{error}}</p>
+              {{/if}}
             </div>
           {{/if}}
         </div>
