--- a/packages/core/assets/css/main.css
+++ b/packages/core/assets/css/main.css
@@ -101,3 +101,15 @@ body {
     width: 20vw;
   }
 }
+
+.u-hiddenVisually {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
