--- a/packages/core/assets/css/main/tokens.css
+++ b/packages/core/assets/css/main/tokens.css
@@ -27,6 +27,9 @@ html {
   --Miyagi-color-Grey-5: hsl(0, 0%, 96%);
   --Miyagi-color-Background-internal: var(--Miyagi-color-Grey-5);
   --Miyagi-color-Background2: #fff;
+  --Miyagi-color-Search-text-internal: var(--Miyagi-color-Link);
+  --Miyagi-color-Search-background-internal: rgba(0, 0, 0, 0.05);
+  --Miyagi-color-Search-border-internal: rgba(0, 0, 0, 0.25);
   --Miyagi-color-Negative: #d9173e;
   --Miyagi-color-Warning: purple;
   --Miyagi-color-Positive: #690;
@@ -51,6 +54,9 @@ html[dir="rtl"] {
     --Miyagi-color-Grey-5: hsl(0, 0%, 16%);
     --Miyagi-color-Background-internal: hsl(0, 0%, 10%);
     --Miyagi-color-Background2: hsl(0, 0%, 12%);
+    --Miyagi-color-Search-text-internal: var(--Miyagi-color-Link);
+    --Miyagi-color-Search-background-internal: rgba(255, 255, 255, 0.1);
+    --Miyagi-color-Search-border-internal: rgba(255, 255, 255, 0.25);
     --Miyagi-color-Negative: #ff305a;
     --Miyagi-color-Warning: #b578b5;
     --Miyagi-color-Positive: #8dd203;
@@ -66,6 +72,9 @@ html[dir="rtl"] {
   --Miyagi-color-Grey-5: hsl(0, 0%, 96%);
   --Miyagi-color-Background-internal: var(--Miyagi-color-Grey-5);
   --Miyagi-color-Background2: #fff;
+  --Miyagi-color-Search-text-internal: var(--Miyagi-color-Link);
+  --Miyagi-color-Search-background-internal: rgba(0, 0, 0, 0.05);
+  --Miyagi-color-Search-border-internal: rgba(0, 0, 0, 0.25);
   --Miyagi-color-Negative: #d9173e;
   --Miyagi-color-Warning: purple;
   --Miyagi-color-Positive: #690;
@@ -79,6 +88,9 @@ html[dir="rtl"] {
   --Miyagi-color-Grey-5: hsl(0, 0%, 16%);
   --Miyagi-color-Background-internal: hsl(0, 0%, 10%);
   --Miyagi-color-Background2: hsl(0, 0%, 12%);
+  --Miyagi-color-Search-text-internal: var(--Miyagi-color-Link);
+  --Miyagi-color-Search-background-internal: rgba(255, 255, 255, 0.1);
+  --Miyagi-color-Search-border-internal: rgba(255, 255, 255, 0.25);
   --Miyagi-color-Negative: #ff305a;
   --Miyagi-color-Warning: #b578b5;
   --Miyagi-color-Positive: #8dd203;
