--- a/packages/core/assets/css/main/theme-switcher.css
+++ b/packages/core/assets/css/main/theme-switcher.css
@@ -3,7 +3,7 @@
 }
 
 .ThemeSwitcher-title {
-  float: left;
+  float: inline-start;
   margin-inline-end: 1.6rem;
 }
 
@@ -19,7 +19,7 @@
 .ThemeSwitcher input {
   position: absolute;
   top: 0;
-  left: 0;
+  inset-inline-start: 0;
   opacity: 0.01;
 }
 
