--- a/packages/core/assets/css/main/theme-switcher.css
+++ b/packages/core/assets/css/main/theme-switcher.css
@@ -29,6 +29,11 @@
   cursor: pointer;
 }
 
+.ThemeSwitcher input:focus-visible + label {
+  outline: 3px solid currentColor;
+  outline-offset: 2px;
+}
+
 .ThemeSwitcher :checked + label {
   background: var(--Miyagi-color-Link-active-background);
   border-radius: var(--Miyagi-borderRadius);
