feat(core): added "go to" function
pressing "g" opens a dialog which allows quickly jumping to a component

--- a/packages/core/assets/css/main.css
+++ b/packages/core/assets/css/main.css
@@ -6,6 +6,7 @@
 @import "./main/results.css";
 @import "./main/result.css";
 @import "./main/theme-switcher.css";
+@import "./main/goto.css";
 
 html {
   font-size: 62.5%;
