--- a/packages/core/lib/views/main.hbs
+++ b/packages/core/lib/views/main.hbs
@@ -141,6 +141,16 @@
             </div>
           </fieldset>
         </form>
+
+        <form class="GoTo u-hiddenVisually" data-url-pattern="{{flatUrlPattern}}" autocomplete="off">
+          <label class="GoTo-label" for="goto-input">Go to…</label>
+          <input class="GoTo-input" type="text" list="goto-list" id="goto-input">
+          <datalist id="goto-list">
+            {{#each flatMenu}}
+              <option value="{{this.value}}">{{this.component}}</option>
+            {{/each}}
+          </datalist>
+        </form>
       </div>
     </nav>
 
