--- a/packages/core/assets/css/main/menu.css
+++ b/packages/core/assets/css/main/menu.css
@@ -43,8 +43,8 @@
   box-shadow: 0.1em 0.1em 0.3em rgba(0, 0, 0, 0.2) inset;
   color: var(--Miyagi-color-Search-text);
   background: var(--Miyagi-color-Search-background);
-  padding: 0.35em 2.5em;
-  padding-inline-start: 0.5em;
+  padding: 0.35em 0.5em;
+  padding-inline-end: 2.5em;
   width: 100%;
 }
 
