feat(core): added a text direction switcher to the menu

--- a/packages/core/assets/css/main.css
+++ b/packages/core/assets/css/main.css
@@ -5,7 +5,7 @@
 @import "./main/test.css";
 @import "./main/results.css";
 @import "./main/result.css";
-@import "./main/theme-switcher.css";
+@import "./main/config-switcher.css";
 @import "./main/goto.css";
 
 html {
