--- a/packages/core/assets/css/main/config-switcher.css
+++ b/packages/core/assets/css/main/config-switcher.css
@@ -1,50 +1,52 @@
-.ThemeSwitcher {
+.ConfigSwitcher {
   margin-top: 2rem;
 }
 
-.ThemeSwitcher-title {
+.ConfigSwitcher-title {
   float: inline-start;
-  margin-inline-end: 1.6rem;
+  font-size: 0.875em;
+  line-height: 2.4rem;
+  width: 7em;
 }
 
-.ThemeSwitcher-options {
+.ConfigSwitcher-options {
   display: flex;
   gap: 0.8rem;
 }
 
-.ThemeSwitcher-option {
+.ConfigSwitcher-option {
   position: relative;
 }
 
-.ThemeSwitcher input {
+.ConfigSwitcher input {
   position: absolute;
   top: 0;
   inset-inline-start: 0;
   opacity: 0.01;
 }
 
-.ThemeSwitcher label {
+.ConfigSwitcher label {
   display: flex;
   padding: 0.4rem;
   cursor: pointer;
 }
 
-.ThemeSwitcher input:focus-visible + label {
+.ConfigSwitcher input:focus-visible + label {
   outline: 3px solid currentColor;
   outline-offset: 2px;
 }
 
-.ThemeSwitcher :checked + label {
+.ConfigSwitcher :checked + label {
   background: var(--Miyagi-color-Link-active-background);
   border-radius: var(--Miyagi-borderRadius);
 }
 
-.ThemeSwitcher svg {
+.ConfigSwitcher svg {
   height: 1.6rem;
   width: 1.6rem;
   fill: var(--Miyagi-color-Link);
 }
 
-.ThemeSwitcher :checked + label svg {
+.ConfigSwitcher :checked + label svg {
   fill: var(--Miyagi-color-Link-active);
 }
