--- a/packages/core/lib/views/component_variation.hbs
+++ b/packages/core/lib/views/component_variation.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1,width=device-width">
     <title>Component</title>
-    {{{jsFiles}}}
+    {{{jsFilesHead}}}
     {{#if dev}}
       <script src="{{projectName}}/js/socket.io.min.js" defer></script>
     {{/if}}
@@ -64,6 +64,7 @@
         <p class="MiyagiError">{{error}}</p>
       </div>
     {{/if}}
+    {{{jsFilesBody}}}
   </body>
 
 </html>
