--- a/packages/core/lib/views/layouts/iframe_default.hbs
+++ b/packages/core/lib/views/layouts/iframe_default.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1,width=device-width">
     <meta name="color-scheme" content="dark light">
     <title>Component</title>
-    {{{jsFiles}}}
+    {{{jsFilesHead}}}
     {{#if dev}}
     <script src="{{projectName}}/js/socket.io.min.js" defer></script>
     {{/if}}
@@ -64,5 +64,6 @@
   </head>
   <body>
     {{#block "body"}}{{/block}}
+    {{{jsFilesBottom}}}
   </body>
 </html>
